--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,25 @@
-name: Generate Snake
+name: Generate Datas
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Generate the snake
-        uses: Platane/snk@master
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
           github_user_name: Raisenil
-          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - name: Show build status
-        run: git status
-
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "Generate contribution graph with snake"
-          git push
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
